@@ -206,6 +206,7 @@ public:
 					// Handle scrollbar.
 	static void scrolled(GtkAdjustment *adj, gpointer data);
 	virtual void move(bool upwards);// Move current selected combo.
+	virtual void search(char *srch, int dir);
 #ifdef WIN32
 	static gint win32_drag_motion(GtkWidget *widget, GdkEventMotion *event,
 		gpointer data);
